index.css
body {
    margin: 0px;
    overflow: hidden;
}

#mainCanvas {
	width: 100%;
	height: 100%;
}

#sidebar {
    position: absolute;
    top: 0px;
    left: 0px;
    background-color: rgba(0, 0, 0, 0.5);
    color: white;
    font-family: 'Ubuntu';
    user-select: none;
    overflow-y: auto;
    overflow-x: hidden;
}

#coordinates {
    position: absolute;
    bottom: 0px;
    right: 0px;
    background-color: rgba(0, 0, 0, 0.5);
    color: white;
    font-family: 'Ubuntu';
    padding: 8px;
    border-top-left-radius: 8px;
    user-select: none;
}

.head {
    text-align: center;
}

#icons {
    text-align: center;
    position: sticky;
    margin-left: auto;
    margin-right: auto;
    left: 0px;
    right: 0px;
    bottom: 10px;
    padding-top: 10px;
}

#icons>a {
    font-size: 25px;
    color: white;
    text-decoration: none;
}

#options {
    margin: 12px;
}

textarea, input {
    background-color: #f8f8f8;
    color: black;
    resize: both;
    line-height: 14px;
    font: 12px/16px ubuntu, sans-serif;
	font-weight: normal;
    border: 2px solid black;
    border-radius: 3px;
    user-select: text;
    padding: 2px;
    -moz-user-select: text;
    -webkit-user-select: text;
    -ms-user-select: text;
    outline: none;
}

textarea {
    width: 150px;
    height: 40px;
}

input[type=color] {
	padding: 0px;
}

select {
    background-color: #f8f8f8;
    color: black;
    resize: none;
    width: 96px;
    height: 23px;
    line-height: 14px;
    font: 12px/16px ubuntu, sans-serif;
    font-weight: 600;
    border: 2px solid black;
    border-radius: 3px;
    padding: 1px;
    outline: none;
}

textarea:hover,
textarea:focus,
select:hover,
select:focus {
    background-color: white;
}

button {
    background-color: #8B8B8B;
    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 40%, rgba(173, 173, 173, 1) 50%);
    border: 2px solid #333333;
    border-radius: 2px;
    color: white;
    width: 100px;
    line-height: 15px;
    text-align: center;
    text-decoration: none;
    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black, -1px -1px black, -1px 1px black, 1px 1px black, 1px -1px black;
    display: inline-block;
    font-size: 11px;
    font-weight: 600;
    padding: 1px;
    outline: none;
}

button:hover,
.toggle label:hover {
    background-color: #989898;
    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 40%, rgba(198, 198, 198, 1) 50%);
}

button:active,
.toggle label:active {
    background-color: #8A8A8A;
    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 40%, rgba(111, 111, 111, 1) 50%);
}

/* End buttons */

/* Checkboxes - use for default */

.toggle {
    width: 55px;
    height: 20px;
    background: #333333;
    margin: 20px auto;
    position: relative;
    border-radius: 2px;
}

.toggle:after {
    content: 'OFF';
    color: #F14E54;
    position: absolute;
    right: 3px;
    z-index: 0;
    font: 12px/19px ubuntu, sans-serif;
    font-weight: 600;
}

.toggle:before {
    content: 'ON';
    color: #00E16E;
    position: absolute;
    left: 3px;
    z-index: 0;
    font: 12px/19px ubuntu, sans-serif;
    font-weight: 600;
}

.toggle label {
    display: block;
    width: 25px;
    height: 16px;
    cursor: pointer;
    position: absolute;
    top: 1px;
    left: 1px;
    z-index: 1;
    background-color: #8B8B8B;
    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 40%, rgba(173, 173, 173, 1) 50%);
    border: 1px solid #333333;
    border-radius: 2px;
    transition: all 0.1s ease;
}

.toggle input[type=checkbox] {
    visibility: hidden;
}

.toggle input[type=checkbox]:checked+label {
    left: 27px;
}

/* End checkboxes */

.dbtn-green:hover {
    background-color: #95CB79;
    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 40%, #B6FA94 50%);
}

.dbtn-green:active {
    background-color: #95CB79;
    background-image: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 40%, #70995C 50%);
}

.dbtn-blue:hover {
    background-color: #7993CB;
    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 40%, #92B2F8 50%);
}

.dbtn-blue:active {
    background-color: #7993CB;
    background-image: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 40%, #6E86BA 50%);
}

.dbtn-red:hover {
    background-color: #CB7979;
    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 40%, #F89292 50%);
}

.dbtn-red:active {
    background-color: #CB7979;
    background-image: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 40%, #B86C6C 50%);
}

.optionRow, .buttonPair {
	display: flex;
}

.optionRow>* {
    display: inline-flex;
}

.optionRow>*:nth-child(2n) {
    display: inline-flex;
    flex-grow: 100;
    margin-left: 8px;
}

.buttonPair>* {
	flex-grow: 100;
	margin: 2px;
	padding: 3px;
}

.posDisplay {
	min-width: 60px;
}

.posLabel {
	padding-right: 8px;
}

.posVal {
	float: right;
}

